# calvin-and-hobbes-text-density

./: .gitattributes  .gitignore  README.md  panel_data.csv  pyproject.toml
notebooks/: analysis.ipynb
src/: area.py  extract.py
